fix: bot cards text alignment issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -200,7 +200,9 @@ section {
 #our-bots .card-text {
   font-size: 0.8rem;
   text-align: left;
-
+  border-bottom-left-radius: 2rem;
+  border-bottom-right-radius: 2rem;
+  background-color: var(--bot-wrapper);
 }
 
 #our-bots .card .footer a {
@@ -482,5 +484,5 @@ section #DAO {
 }
 
 .card-column {
-  flex: 0 0 15vw;
+  flex:1;
 }
